# qmc_generators

./: CMakeLists.txt  README.md  add_new.py
dryrun/: CMakeLists.txt  README.md
dryrun/src/: generator.hpp  main.cpp
faure/: CMakeLists.txt  README.md
faure/include/qmc/: faure.hpp  faure_api.h
faure/src/: faure.cpp  faure_api.cpp
halton/: CMakeLists.txt
halton/include/qmc/: halton_api.h
halton/src/: halton_api.cpp
halton409/: CMakeLists.txt  README.md
halton409/include/qmc/: halton409_api.h  halton_api.h
halton409/src/: halton409.cpp  halton409_api.cpp  halton_api.cpp
halton409_large/: CMakeLists.txt
halton409_large/include/qmc/: halton.hpp  halton_api.h
halton409_large/src/: halton.cpp  halton_api.cpp
halton_large/: CMakeLists.txt
halton_large/include/qmc/: halton.hpp  halton_api.h
halton_large/src/: halton.cpp  halton_api.cpp
hammersley/: CMakeLists.txt  README.md
hammersley/include/qmc/: hammersley.hpp  hammersley_api.h
hammersley/src/: hammersley_api.cpp
latin_center/: CMakeLists.txt  README.md
latin_center/include/qmc/: latin_center.hpp  latin_center_api.h
latin_center/src/: latin_center_api.cpp
latin_random/: CMakeLists.txt
latin_random/include/qmc/: latin_random.hpp  latin_random_api.h
latin_random/src/: latin_random_api.cpp
niederreiter2/: CMakeLists.txt  README.md
niederreiter2/include/qmc/: niederreiter2.hpp  niederreiter2_api.h
niederreiter2/src/: niederreiter2.cpp  niederreiter2_api.cpp
plot_sample_points/: plot_sample_points.py
primes/: CMakeLists.txt  find_primes.py
sobol/: CMakeLists.txt  README.md
sobol/include/qmc/: sobol.hpp  sobol_api.h
sobol/src/: sobol_api.cpp
sobol_large/: CMakeLists.txt
sobol_large/include/qmc/: sobol_large_api.h
sobol_large/src/: sobol_large_api.cpp
tests/: CMakeLists.txt
tests/src/: all_generators.hpp  generator.hpp
