CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(qmc_generators C CXX)
set (CMAKE_CXX_STANDARD 11)
ADD_SUBDIRECTORY(halton)
ADD_SUBDIRECTORY(latin_random)
ADD_SUBDIRECTORY(faure)
ADD_SUBDIRECTORY(latin_center)
ADD_SUBDIRECTORY(sobol)
ADD_SUBDIRECTORY(niederreiter2)
ADD_SUBDIRECTORY(hammersley)
ADD_SUBDIRECTORY(primes)
ADD_SUBDIRECTORY(halton_large)
