CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(qmc_generators C CXX)
SET(BUILD_TESTS OFF CACHE BOOL "Build tests (requires gtest)")
set (CMAKE_CXX_STANDARD 11)
ADD_SUBDIRECTORY(halton)
ADD_SUBDIRECTORY(halton409)
ADD_SUBDIRECTORY(latin_random)
ADD_SUBDIRECTORY(faure)
ADD_SUBDIRECTORY(latin_center)
ADD_SUBDIRECTORY(sobol)
ADD_SUBDIRECTORY(niederreiter2)
ADD_SUBDIRECTORY(hammersley)
ADD_SUBDIRECTORY(primes)
ADD_SUBDIRECTORY(halton_large)
ADD_SUBDIRECTORY(halton409_large)
ADD_SUBDIRECTORY(sobol_large)
if (BUILD_TESTS)
   ADD_SUBDIRECTORY(tests)
endif()
ADD_SUBDIRECTORY(dryrun)
